src/test/test-models/good/keywords-return.stan
parameters {
  real returning;
}
model {
  returning ~ normal(0,1);
}
